<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.talent.taskmanager.TaskListActivity" >

    <item android:id="@+id/action_sign_in"
        android:title="@string/sign_in"
        android:orderInCategory="100"
        android:showAsAction="always" />

    <item android:id="@+id/action_log_out"
        android:title="@string/log_out"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_refresh"
        android:title="@string/refresh"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_change_password"
        android:title="@string/change_password"
        android:orderInCategory="90"
        android:showAsAction="ifRoom" />

</menu>
