<?xml version="1.0" encoding="utf-8"?>

<com.talent.taskmanager.task.TaskItemView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<ImageView-->
        <!--android:id="@+id/img_task_icon"-->
        <!--android:layout_width="31dp"-->
        <!--android:layout_height="31dp"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:scaleType="centerCrop"-->
        <!--android:contentDescription="task_icon" />-->

    <TextView
        android:id="@+id/txt_task_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_alignParentLeft="true"
        android:text="@string/task_default_title"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/txt_person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_task_title"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/person_name"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/txt_contact_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_task_title"
        android:text="@string/contact_info"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/txt_person_name"/>

    <TextView
        android:id="@+id/txt_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_task_title"
        android:layout_toRightOf="@id/txt_contact_info"
        android:layout_marginLeft="5dp"
        android:text="@string/address"
        android:textSize="12sp"
        android:textColor="@android:color/black"/>


</com.talent.taskmanager.task.TaskItemView>