<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp">

    <TextView
        android:id="@+id/list_header_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_total_count"/>

    <TextView
        android:id="@+id/header_count_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"/>

    <TextView
        android:id="@+id/list_header_unread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/un_read"
        android:textColor="@android:color/holo_red_light"/>

    <TextView
        android:id="@+id/list_header_unread_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:textColor="@android:color/holo_red_light"/>

    <TextView
        android:id="@+id/list_header_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/has_been_read"
        android:textColor="@android:color/holo_blue_light"/>

    <TextView
        android:id="@+id/list_header_read_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:textColor="@android:color/holo_blue_light"/>

    <TextView
        android:id="@+id/list_header_processing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/task_processing"
        android:textColor="@android:color/holo_green_light"/>

    <TextView
        android:id="@+id/list_header_processing_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:textColor="@android:color/holo_green_light"/>

</LinearLayout>