<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="80dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@android:color/holo_blue_light"
    tools:context=".MyActivity"
    android:gravity="top">

    <TextView
        android:id="@+id/txt_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_login_title"
        android:textSize="27sp"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/txt_username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_app_title"
        android:layout_marginTop="10dp"
        android:text="@string/user_name"
        android:textSize="@dimen/login_page_txt_size"
        />

    <TextView
        android:id="@+id/txt_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_username_label"
        android:layout_marginTop="10dp"
        android:layout_alignEnd="@id/txt_username_label"
        android:layout_alignRight="@id/txt_username_label"
        android:text="@string/password"
        android:textSize="@dimen/login_page_txt_size"/>

    <EditText
        android:id="@+id/txt_username_input"
        android:layout_toEndOf="@id/txt_username_label"
        android:layout_toRightOf="@id/txt_username_label"
        android:layout_alignBottom="@id/txt_username_label"
        style="@style/login_edittext_style"
        />

    <EditText
        android:id="@+id/txt_password_input"
        android:layout_toEndOf="@id/txt_password_label"
        android:layout_toRightOf="@id/txt_password_label"
        android:layout_alignBottom="@id/txt_password_label"
        android:inputType="textPassword"
        style="@style/login_edittext_style" />

    <TextView
        android:id="@+id/txt_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_password_label"
        android:layout_alignStart="@id/txt_password_label"
        android:layout_alignLeft="@id/txt_password_label"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:text="@string/default_login_hint"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/txt_password_input"
        android:layout_alignEnd="@id/txt_password_input"
        android:layout_alignRight="@id/txt_password_input"
        android:background="@drawable/selector_login_button"
        android:text="@string/login"
        android:textSize="@dimen/login_page_txt_size"/>


</RelativeLayout>
