<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/task_person_name"
                android:padding="3dip"
                android:gravity="left" />
            <TextView
                android:id="@+id/detail_person_name"
                android:padding="3dp" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/task_address"
                android:padding="3dip"
                android:gravity="left"
                />
            <TextView
                android:id="@+id/detail_task_address"
                android:padding="3dip"
                android:maxWidth="200dp"
                android:maxLines="5"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/task_contact_info"
                android:padding="3dip"
                android:gravity="left" />
            <TextView
                android:id="@+id/detail_task_contact_info"
                android:padding="3dip"/>
        </TableRow>
        <!--<TableRow>-->
            <!--<TextView-->
                <!--android:layout_column="1"-->
                <!--android:text="@string/file_info_canwrite"-->
                <!--android:padding="3dip"-->
                <!--android:gravity="left" />-->
            <!--<TextView-->
                <!--android:id="@+id/information_canwrite"-->
                <!--android:padding="3dip" />-->
        <!--</TableRow>-->
        <!--<TableRow>-->
            <!--<TextView-->
                <!--android:layout_column="1"-->
                <!--android:text="@string/file_info_ishidden"-->
                <!--android:padding="3dip"-->
                <!--android:gravity="left" />-->
            <!--<TextView-->
                <!--android:id="@+id/information_ishidden"-->
                <!--android:padding="3dip" />-->
        <!--</TableRow>-->
    </TableLayout>
</ScrollView>